# consensus

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml
consensus/: __init__.py  __main__.py  ai_client.py  app.py  auth.py  config.py  database.py  desktop.py  models.py  moderator.py  server.py  session.py  tools.py  tools_builtin.py  tools_memory.py
consensus/static/: app.js  index.html  style.css
docs/devel/: 01-getting-started.md  02-architecture.md  03-backend-modules.md  04-frontend.md  05-database.md  06-data-flow-and-lifecycle.md  07-api-reference.md  08-tool-use.md  09-prompts-providers-security.md  10-contributing.md  11-authentication.md  programmer-manual.md
docs/plans/: 2026-03-03-api-key-storage-design.md  2026-03-03-api-key-storage-plan.md  2026-03-04-entity-soft-delete-design.md  2026-03-06-tool-use-architecture-design.md  2026-03-07-institutional-memory-design.md
tests/: conftest.py  test_app.py  test_config.py  test_database.py  test_models.py  test_moderator.py  test_session.py  test_tools.py
