[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consensus"
version = "0.1.0"
description = "A moderated discussion platform for humans and AI"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]
web = ["aiohttp>=3.9"]
tools = ["trafilatura>=1.6"]
all = [
    "pywebview>=5.0",
    "aiohttp>=3.9",
    "trafilatura>=1.6",
]

[project.scripts]
consensus = "consensus.__main__:main"

[tool.setuptools.packages.find]
include = ["consensus*"]

[tool.setuptools.package-data]
consensus = ["static/*"]
